Slight z-index fix

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
 	background-size: 100% 100%;
 	background-repeat: no-repeat;
 	background-position: "left top";
+	z-index: -10;
 }
 
 a {
